--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -276,9 +276,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="0KY-pe-Th9">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="0KY-pe-Th9">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BMl-uz-4Cz" id="cSw-Tz-NXX"/>
@@ -287,6 +286,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0KY-pe-Th9" firstAttribute="top" secondItem="f9v-Yo-JUL" secondAttribute="top" id="3mz-h2-ajX"/>
+                            <constraint firstAttribute="bottom" secondItem="0KY-pe-Th9" secondAttribute="bottom" id="B0E-qu-6UP"/>
+                            <constraint firstAttribute="trailing" secondItem="0KY-pe-Th9" secondAttribute="trailing" id="L6P-5y-UiY"/>
+                            <constraint firstItem="0KY-pe-Th9" firstAttribute="leading" secondItem="f9v-Yo-JUL" secondAttribute="leading" id="xvM-fG-J1F"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="3aM-iJ-j6T"/>
                     <navigationItem key="navigationItem" id="aH1-Kc-odM"/>
