--- a/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
@@ -11,13 +11,56 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="centerOrderCell" id="KGk-i7-Jjw" customClass="CenterOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="centerOrderCell" rowHeight="80" id="KGk-i7-Jjw" customClass="CenterOrderCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNW-A2-61t">
+                        <rect key="frame" x="12" y="12.5" width="55" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="84p-E3-SqC"/>
+                            <constraint firstAttribute="width" constant="55" id="tSM-2T-XcQ"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKC-Eb-3FB">
+                        <rect key="frame" x="91" y="12" width="55" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="bsc-Hk-VFs"/>
+                            <constraint firstAttribute="width" constant="55" id="zh0-xY-Xgh"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9J8-aO-BSg">
+                        <rect key="frame" x="173" y="12" width="55" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="Nak-BG-qg8"/>
+                            <constraint firstAttribute="width" constant="55" id="PsC-fD-ktn"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3B-IZ-ood">
+                        <rect key="frame" x="253" y="12" width="55" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="55" id="daO-89-AaY"/>
+                            <constraint firstAttribute="height" constant="55" id="zx5-Z4-ffa"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="YKC-Eb-3FB" firstAttribute="centerY" secondItem="UNW-A2-61t" secondAttribute="centerY" id="ERm-yk-rpW"/>
+                    <constraint firstItem="UNW-A2-61t" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HF2-ko-Ffb"/>
+                    <constraint firstItem="J3B-IZ-ood" firstAttribute="centerY" secondItem="UNW-A2-61t" secondAttribute="centerY" id="dIg-ck-S98"/>
+                    <constraint firstItem="UNW-A2-61t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="lee-Qn-0p6"/>
+                    <constraint firstAttribute="trailing" secondItem="J3B-IZ-ood" secondAttribute="trailing" constant="12" id="v7D-dy-Nyr"/>
+                    <constraint firstItem="9J8-aO-BSg" firstAttribute="centerY" secondItem="UNW-A2-61t" secondAttribute="centerY" id="wrq-su-7JW"/>
+                </constraints>
             </tableViewCellContentView>
+            <point key="canvasLocation" x="26" y="70"/>
         </tableViewCell>
     </objects>
 </document>
