--- a/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
@@ -23,6 +23,7 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Va1-pX-bnP">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <color key="separatorColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="EKR-48-cUM"/>
                         <outlet property="delegate" destination="-1" id="YCs-yy-Uzy"/>
