--- a/AutoMall/ViewControllers/Upkeep/BaoyangHistoryVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangHistoryVC.xib
@@ -23,6 +23,7 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xJP-yJ-uci">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="vdj-zY-zl8"/>
                         <outlet property="delegate" destination="-1" id="tZD-cL-HcS"/>
