--- a/AutoMall/ViewControllers/Information/InformationCell.xib
+++ b/AutoMall/ViewControllers/Information/InformationCell.xib
@@ -15,11 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gjT-02-tBf">
-                        <rect key="frame" x="8" y="8" width="74" height="68"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timg-2" translatesAutoresizingMaskIntoConstraints="NO" id="gjT-02-tBf">
+                        <rect key="frame" x="8" y="8" width="74" height="74"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="74" id="U3K-ET-F3E"/>
                             <constraint firstAttribute="width" constant="74" id="e3I-NG-Jhc"/>
@@ -35,7 +35,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="资讯内容多行 资讯内容多行 资讯内容多行 资讯内容多行资讯内容多行 资讯内容多行 资讯内容多行 资讯内容多行 资讯内容多行 资讯内容多行" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B9-lL-q3a">
-                        <rect key="frame" x="90" y="29" width="222" height="47"/>
+                        <rect key="frame" x="90" y="29" width="222" height="52.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -62,4 +62,7 @@
             <point key="canvasLocation" x="-380" y="78"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="timg-2" width="691" height="667"/>
+    </resources>
 </document>
