--- a/AutoMall/ViewControllers/Upkeep/AutoCheckVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckVC.xib
@@ -175,7 +175,7 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mcv-AE-mP7">
                     <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                    <color key="backgroundColor" red="0.98431372549019602" green="0.26666666666666666" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="WHx-NV-hwV"/>
                     </constraints>
